--- a/index.html
+++ b/index.html
@@ -1,154 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Finderbit - Soluções em Software</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <style type="text/css">
-    body {
-  font-family: Arial, sans-serif;
-  color: #333;
-}
-
-.navbar-brand {
-  color: #00CED1; /* Cyan */
-  font-weight: bold;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: #00CED1;
-}
-
-.header-section {
-  background-color: #00CED1;
-  color: #fff;
-  height: 80vh;
-  background-image: url('https://www.codeminer42.com/img/header-background.jpg');
-  background-size: cover;
-  background-blend-mode: multiply;
-}
-
-.header-content h1 {
-  font-size: 3.5rem;
-  font-weight: 700;
-}
-
-.btn-primary {
-  background-color: #32CD32; /* Verde */
-  border-color: #32CD32;
-}
-
-.service-card {
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-}
-
-#about {
-  background-color: #e6f7f7;
-}
-
-footer {
-  background-color: #00CED1;
-  color: white;
-}
-
-  </style>
+  <title>FinderBit</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/base.css">
 </head>
-<body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Finderbit</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#services">Serviços</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">Sobre Nós</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contato</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<body class="text-light">
 
-  <!-- Header Section -->
-  <header class="header-section d-flex align-items-center justify-content-center text-center">
-    <div class="header-content">
-      <h1 class="display-4">Finderbit</h1>
-      <p class="lead">Transformando ideias em soluções digitais</p>
-      <a href="#services" class="btn btn-primary">Nossos Serviços</a>
+  <!-- Matrix Background -->
+  <div class="bg-matrix">
+    <canvas id="matrix"></canvas>
+  </div>
+
+  <!-- Cabeçalho -->
+  <header class="bg-dark text-white py-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <h1 class="h3">FinderBit </h1>
+      <nav class="d-none d-md-flex gap-4">
+        <a href="#sobre" class="text-white text-decoration-none">Sobre</a>
+        <a href="#servicos" class="text-white text-decoration-none">Serviços</a>
+        <a href="#projetos" class="text-white text-decoration-none">Projetos</a>
+        <a href="#contato" class="btn btn-outline-light">Contato</a>
+      </nav>
     </div>
   </header>
 
-  <!-- Services Section -->
-  <section id="services" class="py-5">
+  <!-- Seção Principal -->
+  <section class="py-5 text-center bg-gradient text-white">
+    <div class="container hero-text">
+      <h2 class="display-4 fw-bold">Soluções de Tecnologia para o Futuro</h2>
+      <p class="lead">Realizando sonhos através de código.</p>
+      <a href="#servicos" class="btn btn-light mt-3">Saiba Mais</a>
+    </div>
+  </section>
+
+  <!-- Sobre -->
+  <section id="sobre" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">Serviços</h2>
-      <div class="row">
+      <h3 class="text-center mb-4">Quem Somos</h3>
+      <p class="text-center">Uma empresa dedicada a entregar soluções tecnológicas de alta qualidade, focada na inovação
+        e em resultados tangíveis para o seu negócio. Com uma equipe de especialistas, desenvolvemos projetos sob medida
+        para cada cliente.</p>
+    </div>
+  </section>
+
+  <!-- Serviços -->
+  <section id="servicos" class="py-5 bg-dark">
+    <div class="container">
+      <h3 class="text-center mb-4">Nossos Serviços</h3>
+      <div class="row g-4">
         <div class="col-md-4">
-          <div class="service-card text-center p-4">
-            <h3>Desenvolvimento Web</h3>
-            <p>Sites responsivos, sistemas e soluções web sob medida para seu negócio.</p>
+          <div class="card h-100 shadow-sm text-center p-4">
+            <div class="card-body">
+              <h5 class="card-title">Desenvolvimento Web</h5>
+              <p class="card-text">Criação de sites e aplicações web personalizadas para impulsionar sua presença
+                online.</p>
+            </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="service-card text-center p-4">
-            <h3>Aplicativos Móveis</h3>
-            <p>Aplicativos intuitivos e funcionais para Android e iOS.</p>
+          <div class="card h-100 shadow-sm text-center p-4">
+            <div class="card-body">
+              <h5 class="card-title">Consultoria em TI</h5>
+              <p class="card-text">Estratégias de TI para melhorar o desempenho e segurança do seu negócio.</p>
+            </div>
           </div>
         </div>
         <div class="col-md-4">
-          <div class="service-card text-center p-4">
-            <h3>Consultoria em TI</h3>
-            <p>Estratégias e suporte técnico para otimizar seus processos.</p>
+          <div class="card h-100 shadow-sm text-center p-4">
+            <div class="card-body">
+              <h5 class="card-title">Suporte Técnico</h5>
+              <p class="card-text">Assistência técnica especializada para manter seus sistemas funcionando sempre.</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- About Section -->
-  <section id="about" class="bg-light py-5">
+  <!-- Projetos -->
+  <section id="projetos" class="py-5">
     <div class="container">
-      <h2 class="text-center mb-4">Sobre Nós</h2>
-      <p class="text-center">A Finderbit é uma empresa focada em inovação e qualidade, comprometida em fornecer soluções tecnológicas personalizadas para impulsionar o sucesso de nossos clientes.</p>
+      <h3 class="text-center mb-4">Projetos Destacados</h3>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <img src="projeto1.jpg" class="card-img-top" alt="Projeto 1">
+            <div class="card-body">
+              <h5 class="card-title">Projeto 1</h5>
+              <p class="card-text">Descrição breve do projeto 1, demonstrando sua relevância e impacto.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <img src="projeto2.jpg" class="card-img-top" alt="Projeto 2">
+            <div class="card-body">
+              <h5 class="card-title">Projeto 2</h5>
+              <p class="card-text">Descrição breve do projeto 2, com foco em inovação e tecnologia.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card h-100 shadow-sm">
+            <img src="projeto3.jpg" class="card-img-top" alt="Projeto 3">
+            <div class="card-body">
+              <h5 class="card-title">Projeto 3</h5>
+              <p class="card-text">Descrição breve do projeto 3, voltado para soluções escaláveis.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5">
+  <!-- Contato -->
+  <section id="contato" class="py-5 text-center bg-dark">
     <div class="container">
-      <h2 class="text-center mb-4">Contato</h2>
-      <p class="text-center">Entre em contato conosco para saber mais sobre nossos serviços.</p>
-      <form class="contact-form mx-auto" style="max-width: 500px;">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Nome">
-        </div>
-        <div class="form-group">
-          <input type="email" class="form-control" placeholder="E-mail">
-        </div>
-        <div class="form-group">
-          <textarea class="form-control" rows="4" placeholder="Mensagem"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-      </form>
+      <h3 class="mb-4">Entre em Contato</h3>
+      <p class="mb-4">Pronto para transformar seu negócio? Fale conosco hoje mesmo!</p>
+      <a href="mailto:finderbit1@gmail.com" class="btn btn-primary">Enviar Email</a>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="text-center py-4">
-    <p>&copy; 2024 Finderbit. Todos os direitos reservados.</p>
+  <!-- Rodapé -->
+  <footer class="bg-dark text-white py-4">
+    <div class="container text-center">
+      <p>&copy; 2023 FinderBit. Todos os direitos reservados.</p>
+      <div class="d-flex justify-content-center gap-3">
+      </div>
+    </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/index.js"></script>
 </body>
+
 </html>
